finalproject/styles.css
* {
    box-sizing: border-box;
    margin: 0;
    padding: 0;
    overflow: hidden;
    scroll-behavior: smooth;
}

#wrapper {
    display: grid;
    width: 500vw;
    height: 100vh;
    grid-template-rows: 11fr 1fr;
    grid-template-columns: 1fr 1fr 1fr 1fr 1fr;
    grid-template-areas: "welcome first second third thanks" ". . circles . .";
    /*grid styling donezo, other styling below*/
    background-color: #A2666F;
    color: #FFBFB7;
}

#wrapper #firstGraphic, #wrapper #secondGraphic, #wrapper #thirdGraphic {
    display: flex;
    flex-direction: column;
}

img {
    align-self: center;
    object-fit: contain;
}

/*grid styling*/
#startHere {
    width: 0;
    height: 0;
    top: 0;
    left: 0;
}

#welcomePage {
    grid-area: welcome;
    /*make it not as big and also center it!*/
    width: 75vw;
    margin: auto;
    text-align: center;
    font-size: 1.75rem;
}

#firstGraphic {
    grid-area: first;
}

#secondGraphic {
    grid-area: second;

}

#thirdGraphic {
    grid-area: third;

}

#thanksPage {
    grid-area: thanks;
}

#navButtons {
    grid-area: circles;
    position: fixed;
    bottom: 0;
    left: 43vw;
}

#navButtons li {
   display: inline-flex;
    align-items: center;
    background-color: #FFBFB7;
    border: 1px solid #4A4063;
    padding: 4px 9px;
}

#navButtons li a {
    text-decoration: none;
    color: white;
}

#navButtons li:hover {
    color: #FFBFB7;
    background-color: #4A4063;
}


#screenSmall {
    visibility: hidden;
}

/* button styling */
.button {
    display: block;
    width: 7rem;
    padding: 0.5rem;
    margin: 10px auto;
    border: 1px solid #4A4063;
    background-color: #FFBFB7;
    color: #4A4063;
    border-radius: 5px;
    text-decoration: none;
    text-align: center;
    font-size: 1.2rem;
}

/*text styling*/
h1, h2  {
    font-family: sketchnote-text, sans-serif;
    font-weight: 700;
    font-style: normal;
}

p, a {
    font-family: pt-sans-pro, sans-serif;
    font-weight: 400;
    font-style: normal;
}

/* second graphic stuff */
#secondGraphic {
    position: relative;
}

#secondGraphic a {
    margin-top: 650px;
}

#background {
    position: absolute;
    z-index: 0;
    margin-top: 32px;
}

#portraitbg {
    position: absolute;
    z-index: 1;
    margin-top: 150px;
}

svg {
    z-index: 2;
    position: absolute;
    margin-left: 45.8vw;
    margin-top: 190px;
}

#thirdGraphic {
    position: relative;
    display: inline-block;
}

object {
    z-index: 2;
    position: absolute;
    width: 40%;
    height: 40%;
    margin-left: 22vw;
    margin-top: 70px;
    left: 0;
}

#portrait {
    position: absolute;
    z-index: 3;
    margin-top: 150px
}

#frame {
    position: absolute;
    z-index: 4;
    margin-top: 100px;
}

#thanksPage h2 {
    justify-content: center;
    align-items: center;
    text-align: center;
    font-size: 2rem;
    margin: 20px 0;
}

#thanksPage p, #thanksPage ul li {
    font-family: sans-serif;
    width: 60%;
    margin: auto;
    font-size: 1.3rem;
    text-align: left;
}

/* small screen stuff */
@media screen and (max-width: 411px) {
    #screenSmall {
        visibility: visible;
        border: 1px solid white;
        background-color: lightcoral;
        color: white;
        padding: 13px;
        border-radius: 5px;
    }

    .button {
        visibility: hidden;
    }

    .alert {
        font-family: sketchnote-text, sans-serif;
        font-weight: 500;
        font-style: normal;
        font-size: 1.5rem;
    }

    #navButtons {
        visibility: hidden;
    }
}

